# linode-rs

./: Cargo.toml  README.md
linode-api/: Cargo.toml  README.md
linode-api-proxy/: Cargo.toml  README.md
linode-api-proxy/src/: args.rs  context.rs  lib.rs  main.rs
linode-api-proxy/src/http_handlers/: fallback_handler.rs  mod.rs
linode-api-proxy/src/http_handlers/v4/: error.rs  mod.rs
linode-api-proxy/src/http_handlers/v4/linode_instances/: linode_show_by_label_handler.rs  linode_view_by_label_handler.rs  mod.rs
linode-api/demo/: Cargo.toml
linode-api/demo/src/: v4_linode_instances_linode_simple.rs  v4_linode_instances_linodes_list.rs  v4_linode_types_types_list.rs
linode-api/src/: lib.rs  v4_client.rs
linode-api/src/endpoints/: mod.rs
linode-api/src/endpoints/v4/: common.rs  error.rs  mod.rs  x_list.rs
linode-api/src/endpoints/v4/linode_instances/: config_create.rs  disk_create.rs  disk_view.rs  ip_addresses_info.rs  linode_boot.rs  linode_create.rs  linode_reboot.rs  linode_view.rs  linodes_list.rs  mod.rs
linode-api/src/endpoints/v4/linode_types/: mod.rs  type_view.rs  types_list.rs
linode-api/src/objects/: error.rs  mod.rs
linode-api/src/objects/v4/: error.rs  mod.rs
linode-api/src/objects/v4/linode_instances/: config.rs  disk.rs  ip_address.rs  linode.rs  linode_view.rs  linodes_list.rs  mod.rs
linode-api/src/objects/v4/linode_types/: mod.rs  type.rs
linode-api/src/types/: mod.rs  version.rs
linode-api/tests/response_body_files/: README.md  error__with_page_size_invalid.json
linode-api/tests/response_body_files/error/: README.md  error__with_invalid_json.json  error__with_invalid_token.json  error__with_not_found.json
linode-api/tests/response_body_files/linode_instances/: config_create.json  disk_view.json  ip_addresses_info.json  linode_create.json
linode-api/tests/response_body_files/linode_types/: type_view.json
