[package]
name = "linode-api"
version = "0.0.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Linode API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/linode-rs"
homepage = "https://github.com/bk-rs/linode-rs"
documentation = "https://docs.rs/linode-api"
keywords = []
categories = []
readme = "README.md"

[dependencies]
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde-enum-str = { version = "0.3", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }
http = { version = "0.2", default-features = false }
url = { version = "2", default-features = false }
once_cell = { version = "1", default-features = false, features = ["std"] }
wrapping-macro = { version = "0.2", default-features = false, features = ["alloc"] }

[dev-dependencies]
